cmake_minimum_required(VERSION 3.12)
project(cainiao_cpp_examples)
set(CMAKE_CXX_STANDARD 14)

add_executable(0-helloworld 0-helloworld.cpp 0-join_str.cpp)
add_executable(1-data_type 1-data_type.cpp)
add_executable(2-variable 2-variable.cpp)
add_executable(3-variable_scope 3-variable_scope.cpp)
add_executable(4-constant 4-constant.cpp)
add_executable(5-modifier_type 5-modifier_type.cpp)
add_executable(6-storage_class 6-storage_class.cpp)

























