cmake_minimum_required(VERSION 3.12)
project(cainiao_cpp_examples)
set(CMAKE_CXX_STANDARD 14)

add_subdirectory(array)
add_subdirectory(basic)
add_subdirectory(comment)
add_subdirectory(constant)
add_subdirectory(data_type)
add_subdirectory(date_time)
add_subdirectory(define)
add_subdirectory(exception)
add_subdirectory(file)
add_subdirectory(function)
add_subdirectory(io)
add_subdirectory(judgement)
add_subdirectory(loop)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(modifier)
add_subdirectory(multithread)
add_subdirectory(namespace)
add_subdirectory(oop)
add_subdirectory(operator)
add_subdirectory(pointer)
add_subdirectory(reference)
add_subdirectory(signal)
add_subdirectory(string)
add_subdirectory(struct)
add_subdirectory(template)
add_subdirectory(variable)
add_subdirectory(web)

