add_executable(d1 pointer_definition.cpp)
add_executable(d2 pointer_use.cpp)
add_executable(d3 pointer_NULL.cpp)
add_executable(d4 pointer_calc.cpp)
add_executable(d5 pointer_compare.cpp)
add_executable(d6 pointer_vs_array.cpp)
add_executable(d7 pointer_array.cpp)
add_executable(d8 pointer_of_pointer.cpp)
add_executable(d9 pointer_func_param.cpp)
add_executable(d10 pointer_func_return.cpp)


